# byteback

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
npm/: install.js  package.json  publish.sh
packaging/aur/: .SRCINFO  .gitignore  PKGBUILD  README.md
src/: cli.rs  config.rs  delete.rs  main.rs  report.rs  scan.rs  target.rs
src/app/: mod.rs  view.rs
