[package]
name = "byteback"
version = "0.1.1"
edition = "2024"
description = "A fast TUI that reclaims disk space by sweeping regenerable build/dependency directories (node_modules, .next, target, ...)."
license = "MIT"
repository = "https://github.com/neolaner/byteback"
readme = "README.md"
keywords = ["tui", "cleanup", "disk-space", "node_modules", "cli"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "byteback"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
humansize = "2.1.3"
jwalk = "0.8.1"
ratatui = "0.30.2"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
trash = "5.2.6"
tui-input = "0.15.3"

[dev-dependencies]
tempfile = "3.27.0"
